# cowork-llm-proxy

./: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wiki.md
app/: auth.py  config.py  main.py
app/api/: messages.py  models.py
app/providers/: __init__.py  anthropic_compat.py  base.py  dashscope.py  deepseek.py  ollama.py  registry.py
nginx/: nginx.conf
wiki/: api-endpoints.md  api.md  architecture.md  auth.md  config.md  deployment.md  extending.md  index.md  log.md  overview.md  providers.md  routing.md  streaming.md  troubleshooting.md
wiki/providers/: anthropic-compat.md  base.md  dashscope.md  deepseek.md  ollama.md
