[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmg-llm-proxy"
version = "1.0.0"
description = "Lightweight Anthropic-compatible proxy for DeepSeek and Aliyun DashScope"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
